--- a/playground.ipynb
+++ b/playground.ipynb
@@ -14,7 +14,16 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n"
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and figure the dataset"
    ]
   },
   {
@@ -23,15 +32,524 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the data"
+    "#Load the data\n",
+    "\n",
+    "df_test = pd.read_csv('test.csv')\n",
+    "df_train = pd.read_csv('train.csv')\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check for missing values\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age count: 714\n",
+      "Cabin count: 204\n",
+      "Embarked count: 889\n",
+      "Survived count: 891\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_count = df_train['Age'].count()\n",
+    "cabin_count = df_train['Cabin'].count()\n",
+    "embarked_count = df_train['Embarked'].count()\n",
+    "survived_count = df_train['Survived'].count()\n",
+    "\n",
+    "print('Age count:', age_count)\n",
+    "print('Cabin count:', cabin_count)\n",
+    "print('Embarked count:', embarked_count)\n",
+    "print('Survived count:', survived_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age missing: 24.789915966386555\n",
+      "Cabin missing: 336.7647058823529\n",
+      "Embarked missing: 0.22497187851518563\n",
+      "Survived missing: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#missing %%\n",
+    "\n",
+    "age_missing = df_train['Age'].isna().sum() / age_count * 100\n",
+    "cabin_missing = df_train['Cabin'].isna().sum() / cabin_count * 100\n",
+    "embarked_missing = df_train['Embarked'].isna().sum() / embarked_count * 100\n",
+    "survived_missing = df_train['Survived'].isna().sum() / survived_count * 100\n",
+    "\n",
+    "print('Age missing:', age_missing)\n",
+    "print('Cabin missing:', cabin_missing)\n",
+    "print('Embarked missing:', embarked_missing)\n",
+    "print('Survived missing:', survived_missing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_train['Embarked'] = df_train['Embarked'].fillna('Unknown')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_train.drop('Cabin', axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass  Sex     Parch  SibSp\n",
+       "1       female  0      0        32.5\n",
+       "                       1        35.0\n",
+       "                       2        53.0\n",
+       "                1      0        43.0\n",
+       "                       1        40.0\n",
+       "                                ... \n",
+       "3       male    2      5        10.0\n",
+       "                       8         NaN\n",
+       "                3      1        16.0\n",
+       "                4      1        40.0\n",
+       "                5      1        39.0\n",
+       "Name: Age, Length: 74, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.groupby(['Pclass', 'Sex', 'Parch','SibSp'])['Age'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining missing values in Age: 16\n",
+      "     PassengerId  Survived  Pclass  \\\n",
+      "0              1         0       3   \n",
+      "1              2         1       1   \n",
+      "2              3         1       3   \n",
+      "3              4         1       1   \n",
+      "4              5         0       3   \n",
+      "..           ...       ...     ...   \n",
+      "886          887         0       2   \n",
+      "887          888         1       1   \n",
+      "888          889         0       3   \n",
+      "889          890         1       1   \n",
+      "890          891         0       3   \n",
+      "\n",
+      "                                                  Name     Sex   Age  SibSp  \\\n",
+      "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+      "..                                                 ...     ...   ...    ...   \n",
+      "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+      "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+      "888           Johnston, Miss. Catherine Helen \"Carrie\"  female  27.5      1   \n",
+      "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+      "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
+      "\n",
+      "     Parch            Ticket     Fare Embarked  \n",
+      "0        0         A/5 21171   7.2500        S  \n",
+      "1        0          PC 17599  71.2833        C  \n",
+      "2        0  STON/O2. 3101282   7.9250        S  \n",
+      "3        0            113803  53.1000        S  \n",
+      "4        0            373450   8.0500        S  \n",
+      "..     ...               ...      ...      ...  \n",
+      "886      0            211536  13.0000        S  \n",
+      "887      0            112053  30.0000        S  \n",
+      "888      2        W./C. 6607  23.4500        S  \n",
+      "889      0            111369  30.0000        C  \n",
+      "890      0            370376   7.7500        Q  \n",
+      "\n",
+      "[891 rows x 11 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_58806/1087500598.py:16: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  grouped_medians = df_train.groupby(['Pclass', 'Sex', 'Parch', 'SibSp', 'Fare_bin'])['Age'].median()\n",
+      "/tmp/ipykernel_58806/1087500598.py:28: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_train['Age'].fillna(overall_median_age, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df_train is your DataFrame\n",
+    "\n",
+    "# Discretize the Fare column into bins\n",
+    "df_train['Fare_bin'] = pd.qcut(df_train['Fare'], 4)\n",
+    "\n",
+    "# Define a function to fill missing values with the median of the group\n",
+    "def fill_age(row, grouped_medians):\n",
+    "    if pd.isnull(row['Age']):\n",
+    "        return grouped_medians.loc[row['Pclass'], row['Sex'], row['Parch'], row['SibSp'], row['Fare_bin']]\n",
+    "    else:\n",
+    "        return row['Age']\n",
+    "\n",
+    "# Calculate the median age for each group\n",
+    "grouped_medians = df_train.groupby(['Pclass', 'Sex', 'Parch', 'SibSp', 'Fare_bin'])['Age'].median()\n",
+    "\n",
+    "# Apply the function to fill missing values\n",
+    "df_train['Age'] = df_train.apply(lambda row: fill_age(row, grouped_medians), axis=1)\n",
+    "\n",
+    "# Check for remaining missing values in Age\n",
+    "missing_age_count = df_train['Age'].isna().sum()\n",
+    "print(f\"Remaining missing values in Age: {missing_age_count}\")\n",
+    "\n",
+    "# If there are still missing values, fill them with the overall median age\n",
+    "if missing_age_count > 0:\n",
+    "    overall_median_age = df_train['Age'].median()\n",
+    "    df_train['Age'].fillna(overall_median_age, inplace=True)\n",
+    "\n",
+    "# Drop the Fare_bin column as it's no longer needed\n",
+    "df_train = df_train.drop('Fare_bin', axis=1)\n",
+    "\n",
+    "# Print the DataFrame to verify the changes\n",
+    "print(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Embarked     891 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(4)\n",
+      "memory usage: 76.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_train.drop(['Name', 'Ticket'], axis=1, errors='ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId    0\n",
+       "Survived       0\n",
+       "Pclass         0\n",
+       "Sex            0\n",
+       "Age            0\n",
+       "SibSp          0\n",
+       "Parch          0\n",
+       "Fare           0\n",
+       "Embarked       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Sex          891 non-null    object \n",
+      " 4   Age          891 non-null    float64\n",
+      " 5   SibSp        891 non-null    int64  \n",
+      " 6   Parch        891 non-null    int64  \n",
+      " 7   Fare         891 non-null    float64\n",
+      " 8   Embarked     891 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(2)\n",
+      "memory usage: 62.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train.info()"
+   ]
   }
  ],
  "metadata": {
