preprocessed test set and added pipeline

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -546,10 +546,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass  Sex     Parch  SibSp\n",
+       "1       female  0      0        36.0\n",
+       "                       1        37.0\n",
+       "                       2        57.0\n",
+       "                1      0        45.0\n",
+       "                       1        50.0\n",
+       "                                ... \n",
+       "3       male    2      4         9.0\n",
+       "                       8        14.5\n",
+       "                5      1        40.0\n",
+       "                6      1        40.0\n",
+       "                9      1         NaN\n",
+       "Name: Age, Length: 61, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test['Embarked'] = df_test['Embarked'].fillna('Unknown')\n",
+    "df_test = df_test.drop('Cabin', axis=1)\n",
+    "df_test.groupby(['Pclass', 'Sex', 'Parch','SibSp'])['Age'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining missing values in Age: 9\n",
+      "     PassengerId  Pclass                                          Name  \\\n",
+      "0            892       3                              Kelly, Mr. James   \n",
+      "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
+      "2            894       2                     Myles, Mr. Thomas Francis   \n",
+      "3            895       3                              Wirz, Mr. Albert   \n",
+      "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
+      "..           ...     ...                                           ...   \n",
+      "413         1305       3                            Spector, Mr. Woolf   \n",
+      "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
+      "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
+      "416         1308       3                           Ware, Mr. Frederick   \n",
+      "417         1309       3                      Peter, Master. Michael J   \n",
+      "\n",
+      "        Sex   Age  SibSp  Parch              Ticket      Fare Embarked  \n",
+      "0      male  34.5      0      0              330911    7.8292        Q  \n",
+      "1    female  47.0      1      0              363272    7.0000        S  \n",
+      "2      male  62.0      0      0              240276    9.6875        Q  \n",
+      "3      male  27.0      0      0              315154    8.6625        S  \n",
+      "4    female  22.0      1      1             3101298   12.2875        S  \n",
+      "..      ...   ...    ...    ...                 ...       ...      ...  \n",
+      "413    male  25.0      0      0           A.5. 3236    8.0500        S  \n",
+      "414  female  39.0      0      0            PC 17758  108.9000        C  \n",
+      "415    male  38.5      0      0  SOTON/O.Q. 3101262    7.2500        S  \n",
+      "416    male  25.0      0      0              359309    8.0500        S  \n",
+      "417    male   7.0      1      1                2668   22.3583        C  \n",
+      "\n",
+      "[418 rows x 10 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f5/sd95g1h96_971tkrqsw_6ggw0000gn/T/ipykernel_81320/64260371.py:16: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  grouped_medians = df_test.groupby(['Pclass', 'Sex', 'Parch', 'SibSp', 'Fare_bin'])['Age'].median()\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df_test is your DataFrame\n",
+    "\n",
+    "# Discretize the Fare column into bins\n",
+    "df_test['Fare_bin'] = pd.qcut(df_test['Fare'], 4)\n",
+    "\n",
+    "# Define a function to fill missing values with the median of the group\n",
+    "def fill_age(row, grouped_medians):\n",
+    "    if pd.isnull(row['Age']):\n",
+    "        return grouped_medians.loc[row['Pclass'], row['Sex'], row['Parch'], row['SibSp'], row['Fare_bin']]\n",
+    "    else:\n",
+    "        return row['Age']\n",
+    "\n",
+    "# Calculate the median age for each group\n",
+    "grouped_medians = df_test.groupby(['Pclass', 'Sex', 'Parch', 'SibSp', 'Fare_bin'])['Age'].median()\n",
+    "\n",
+    "# Apply the function to fill missing values\n",
+    "df_test['Age'] = df_test.apply(lambda row: fill_age(row, grouped_medians), axis=1)\n",
+    "\n",
+    "# Check for remaining missing values in Age\n",
+    "missing_age_count = df_test['Age'].isna().sum()\n",
+    "print(f\"Remaining missing values in Age: {missing_age_count}\")\n",
+    "\n",
+    "# If there are still missing values, fill them with the overall median age\n",
+    "if missing_age_count > 0:\n",
+    "    overall_median_age = df_test['Age'].median()\n",
+    "    df_test['Age'].fillna(overall_median_age, inplace=True)\n",
+    "\n",
+    "# Drop the Fare_bin column as it's no longer needed\n",
+    "df_test = df_test.drop('Fare_bin', axis=1)\n",
+    "\n",
+    "# Print the DataFrame to verify the changes\n",
+    "print(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "\n",
+    "# Define numerical and categorical columns\n",
+    "numerical_features = ['Age', 'Fare', 'SibSp', 'Parch']\n",
+    "categorical_features = ['Sex', 'Embarked']\n",
+    "\n",
+    "# Create transformers for scaling and one-hot encoding\n",
+    "numerical_transformer = StandardScaler()\n",
+    "categorical_transformer = OneHotEncoder(handle_unknown='ignore')\n",
+    "\n",
+    "# Combine transformers into a ColumnTransformer\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numerical_transformer, numerical_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Create a pipeline with the preprocessor\n",
+    "pipeline = Pipeline(steps=[('preprocessor', preprocessor)])\n",
+    "\n",
+    "# Fit and transform the train set\n",
+    "X_train = df_train.drop(['Survived', 'PassengerId'], axis=1)\n",
+    "y_train = df_train['Survived']\n",
+    "X_train_transformed = pipeline.fit_transform(X_train)\n",
+    "\n",
+    "# Transform the test set\n",
+    "X_test = df_test.drop(['PassengerId', 'Name', 'Ticket'], axis=1, errors='ignore')\n",
+    "X_test_transformed = pipeline.transform(X_test)"
+   ]
   },
   {
    "cell_type": "code",
